# sciencebot

./: README.md  create_vectorstore.py  langchain_backend.py  main.py  pyproject.toml  sciencebotapp.py  streamlit_frontend.py
utils/: app_helpers_fncs.py  pydantic_models.py
